feat: add landing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,8 +35,10 @@
 
     --radius: 0.5rem;
 
-    --violet: 261, 39%, 50%;
-    --yellow: 45, 100%, 50%;
+    --main: 45 100% 50%;
+
+    /* --violet: 261, 39%, 50%;
+    --yellow: 45, 100%, 50%; */
   }
 
   .dark {
@@ -69,8 +71,10 @@
 
     --ring: 240 3.7% 15.9%;
 
-    --violet: 261, 39%, 35%;
-    --yellow: 45, 100%, 40%;
+    --main: 261 39% 40%;
+
+    /* --violet: 261, 39%, 35%;
+    --yellow: 45, 100%, 40%;   */
   }
 }
 
