feat: add initial ui

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
+    --accept: 133 84.2% 56%;
+    --accept-foreground: 0 0% 98%;
+
     --ring: 240 5% 64.9%;
 
     --radius: 0.5rem;
@@ -69,12 +72,46 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 85.7% 97.3%;
 
+    --accept: 133 62.8% 30.6%;
+    --accept-foreground: 0 85.7% 97.3%;
+
     --ring: 240 3.7% 15.9%;
 
     --main: 261 39% 40%;
 
     /* --violet: 261, 39%, 35%;
     --yellow: 45, 100%, 40%;   */
+  }
+}
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 5px;
+    height: 7px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: rgba(34, 39, 45, 0.292);
+    border-radius: 100vh;
+    /* border: 3px solid #f6f7ed; */
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    transition: ease-in-out;
+    background: rgba(24, 26, 30, 0.427);
+  }
+
+  .img {
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
   }
 }
 
